<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab01.Trabazo</string>
    <string name="action_settings">Settings</string>
    <string name="but_kill_str">Kill</string>
    <string name="but_count_str">Count</string>
    <string name="count_str">Count: </string>
    <string name="but_to_second_activity">Second Activity</string>
    <string name="title_activity_second">SecondActiv</string>
    <string name="but_kill_str_2">Kill 2</string>
    <string name="but_second_activ">Second Button Activity</string>
    <string name="title_activity_param">ParamActiv</string>
    <string name="but_ok">OK</string>
    <string name="but_to_param_activity">Param Activity</string>
    <string name="title_activity_implicit">ImplicitActiv</string>
    <string name="but_sms">SMS</string>
    <string name="but_call">Call</string>
    <string name="but_camera">Camera</string>
    <string name="but_map">Map</string>
    <string name="but_web">Web</string>
    <string name="but_to_implicit_activity">Implicit Activity</string>
    <string name="title_activity_web">WebActiv</string>
    <string name="hello_world">Hello world!</string>

</resources>
