
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FirstActiv"
    android:id="@+id/ll">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_kill_str"
        android:id="@+id/but_kill"
        android:onClick="onKill" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_count_str"
        android:id="@+id/but_count"
        android:onClick="onCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/count_str"
        android:id="@+id/vistaTexto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_to_second_activity"
        android:id="@+id/but_to_second_activity"
        android:onClick="onToSecondActiv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_to_param_activity"
        android:id="@+id/but_to_param_activity"
        android:onClick="onToParamActiv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_to_implicit_activity"
        android:id="@+id/but_to_implicit_activity"
        android:onClick="onToImplicitActiv" />

</LinearLayout>


