<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.udc.psi14.lab01trabazo.ImplicitActiv">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="667843018"
            android:inputType="phone"
            android:id="@+id/eTextNumber"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="Contenido del mensaje SMS"
            android:inputType="text"
            android:id="@+id/eTextBody"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_sms"
            android:id="@+id/but_sms"
            android:onClick="onSms"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="667843018"
            android:inputType="phone"
            android:id="@+id/eTextPhone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_call"
            android:id="@+id/but_call"
            android:onClick="onCall"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_camera"
            android:id="@+id/but_camera"
            android:onClick="onCamera"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/eTextLat"
            android:text="47.6"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/eTextLong"
            android:text="-122.3"
            android:inputType="numberDecimal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_map"
            android:id="@+id/but_map"
            android:onClick="onMap"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="http://www.google.com"
            android:inputType="textUri"
            android:id="@+id/eTextUrl"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_web"
            android:id="@+id/but_web"
            android:onClick="onWeb"/>
</LinearLayout>

</ScrollView>
